@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.737 2008/08/14 15:42:59 tr Exp $
+# $Id: CHANGES,v 1.738 2008/08/18 12:47:54 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.3.2 (2008/??/??)
+ - (2008/08/18) Fixed bug# 3139 - QueueUpdate-Bug on oracle and postgres dbs.
  - (2008/08/14) Fixed bug# 3191 - It is hard to identify the selected page of
     a list of elements.
  - (2008/08/13) Fixed bug# 3133 - OTRS creates temp dirs with wrong access
